--- a/v1/index.html
+++ b/v1/index.html
@@ -1,90 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cuda</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-  <header class="fullscreen-header">
-    <div class="navbar">
-      <span class="logo-area">
-        <a class="logo" href="#">Cuda</a>
-      </span>
-
-      <nav class="menu">
-        <a class="active" href="#">HOME</a>
-        <a href="#services">ABOUT</a>
-        <a href="#teams">TEAMS</a>
-        <a href="#contact">CONTACT</a>
-      </nav>
+  <div class="header-area">
+    <div class="logo-area">
+      <img src="img/logo.png" alt="Cuda">
     </div>
-
+    <div class="menu-area">
+      <ul>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">WORK</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </div>
     <div class="text-area">
-      <h2>Hi there! <br> We are the new kids on the block<br> and we build awesome websites and apps.</h2>
+      <h2>Hi there! We are the new kids on the block<br> and we build awesome websites and mobile apps.</h2>
+    </div>
+    <div class="wbtn">
+      <input type="button" value="WORK WITH US">
     </div>
 
-    <div class="services-btn">
-      <a role="button" href="#services">What We Do?</a>
-    </div>
-  </header>
-
-  <main>
-    <section class="services" id="services">
-      <div class="content">
-        <div class="section-header">
-          <h2 class="section-title">Services We Provide</h2>
-          <hr style="border-color: white;">
-          <p class="section-subtext">We are working both with individuals and businesses from all over the globe <br> to
-            create awesome websites
-            and applications.</p>
-        </div>
-        <div class="row service-boxes">
-          <div class="col">
+  </div>
+  <div class="srevices">
+    <div class="services-content">
+      <div class="services-text">
+        <h2>Serevices We Provide</h2>
+        <hr>
+        <p>We are working both with individuals and businesses from all over the globe <br> to create awesome websites
+          and applications.</p>
+      </div>
+      <div class="service-box">
+        <div class="col">
+          <div class="service-box1">
             <img src="img/box1.png" alt="Branding">
             <h2>Branding</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione reiciendis consequatur maiores earum
             </p>
-            </>
           </div>
-          <div class="col">
+        </div>
+        <div class="col">
+          <div class="service-box1">
             <img src="img/box2.png" alt="Design">
             <h2>Design</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione reiciendis consequatur maiores earum
             </p>
-            </>
           </div>
-          <div class="col">
+        </div>
+        <div class="col">
+          <div class="service-box1">
             <img src="img/box3.png" alt="Development">
             <h2>Development</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione reiciendis consequatur maiores earum
             </p>
-            </>
           </div>
-          <div class="col">
+        </div>
+        <div class="col">
+          <div class="service-box1">
             <img src="img/box4.png" alt="Rocket Science">
             <h2>Rocket Science</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione reiciendis consequatur maiores earum
             </p>
-            </>
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
-    <section class="team" id="teams">
-      <div class="content">
-        <div class="section-header">
-          <h2 class="section-title">Meet Our Beautiful Team</h2>
-          <hr>
-          <p class="section-subtext">We are a small team of designers and developers, who help brands with big ideas.
-          </p>
-        </div>
-        <div class="row teams">
-          <div class="col team-col">
+  </div>
+  <div class="team">
+    <div class="team-content">
+      <div class="team-text">
+        <h2>Meet Our Beautiful Team</h2>
+        <hr>
+        <p>We are a small team of designers and developers, who help brands with big ideas.</p>
+      </div>
+      <div class="team-box">
+        <div class="team-col">
+          <div class="team-box1">
             <img src="img/member1.jpg" alt="Polok ">
             <h3>Hasibul Polok</h3>
             <label>CEO/Web Developer</label>
@@ -94,9 +94,11 @@
             <i class="fab fa-twitter"></i>
             <i class="fab fa-linkedin"></i>
             <i class="fas fa-envelope"></i>
-            </>
+
           </div>
-          <div class="col team-col">
+        </div>
+        <div class="team-col">
+          <div class="team-box1">
             <img src="img/shakil.png" alt="Shakil ">
             <h3>Shakil Ahmed</h3>
             <label>Creative Director</label>
@@ -106,9 +108,12 @@
             <i class="fab fa-twitter"></i>
             <i class="fab fa-linkedin"></i>
             <i class="fas fa-envelope"></i>
-            </>
+
+
           </div>
-          <div class="col team-col">
+        </div>
+        <div class="team-col">
+          <div class="team-box1">
             <img src="img/masum.jpg" alt="Masum ">
             <h3>Abdulla Masum</h3>
             <label>Lead Designer</label>
@@ -118,49 +123,48 @@
             <i class="fab fa-twitter"></i>
             <i class="fab fa-linkedin"></i>
             <i class="fas fa-envelope"></i>
-            </>
+
           </div>
-          <div class="col team-col">
+        </div>
+        <div class="team-col">
+          <div class="team-box1">
             <img src="img/rokon.jpeg" alt="Cuda Member 1 ">
-            <h3>Roman Rokon</h3>
-            <label>FullStack Developer/UX Advisor</label>
+            <h3>Rokon Khan</h3>
+            <label>SEO/Developer</label>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse aperiam fugiat voluptates assumenda
               recusandae, a.</p>
             <i class="fab fa-facebook"></i>
             <i class="fab fa-twitter"></i>
             <i class="fab fa-linkedin"></i>
             <i class="fas fa-envelope"></i>
-            </>
           </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="skill">
+    <div class="skill-content">
+      <div class="skill-text">
+        <h2>We Got Skills!</h2>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, harum.<br>
+          Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
+    <div class="skill-circle">
+      <div class="circle-col">
+        <div class="circle1">
+
         </div>
       </div>
-    </section>
+    </div>
+  </div>
 
-    <section class="skill">
-      <div class="content">
-        <div class="skill-content">
-          <div class="section-header">
-            <h2 class="section-title">We Got Skills!</h2>
-            <hr style="border-color: #878787;">
-            <p class="section-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, harum.<br>
-              Lorem ipsum dolor sit amet.</p>
-          </div>
-        </div>
-        <div class="skill-circle">
-          <div class="circle-col">
-            <div class="circle1">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <section class="contact" id="contact"></section>
-  </main>
-
-  <footer>
-    <p>This Template Is Coded By <a href="https://web.facebook.com/">"Hasibul Polok"</a></p>
-  </footer>
 </body>
+<footer>
+  <p>This Template Is Coded By <a href="https://web.facebook.com/">"Hasibul Polok"</a></p>
+</footer>
 
 </html>
